# meizi

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: publish.yml  tests.yml
meizi/: cli.py  download.py  wsgi.py
meizi/templates/: base.html  detail.html  list.html
tests/: test_download.py  test_wsgi.py
