[tool.poetry]
name = "meizi"
version = "0.1.1"
description = ""
authors = ["Meng Xiangzhuo <aumo@foxmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
parsel = "^1.7.0"
requests = "^2.28.1"
loguru = "^0.6.0"
flask = "^2.2.2"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.9"
jupyter = "^1.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
httpx = "^0.23.3"

[tool.poetry.scripts]
mz = 'meizi.cli:cli'
meizi = 'meizi.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
